<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <artifactId>thinkjoy-web</artifactId>
        <groupId>com.thinkjoy</groupId>
        <version>1.0.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>thinkjoy-web-server</artifactId>
    <packaging>war</packaging>
    <version>${project.jar.web.version}</version>

    <name>thinkjoy-web-server Maven Webapp</name>
    <!--<url>http://maven.apache.org</url>-->

    <dependencies>
        <dependency>
            <groupId>com.thinkjoy</groupId>
            <artifactId>thinkjoy-oauth-client</artifactId>
        </dependency>

        <dependency>
            <groupId>com.thinkjoy</groupId>
            <artifactId>thinkjoy-ams-rpc-api</artifactId>
        </dependency>

        <dependency>
            <groupId>com.thinkjoy</groupId>
            <artifactId>thinkjoy-ucenter-rpc-api</artifactId>
        </dependency>

        <dependency>
            <groupId>com.thinkjoy</groupId>
            <artifactId>thinkjoy-web-rpc-api</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
        </dependency>
    </dependencies>

    <!--<profiles>-->
        <!--<profile>-->
            <!--<id>dev</id>-->
            <!--<properties>-->
                <!--<env>dev</env>-->
            <!--</properties>-->
            <!--<activation>-->
                <!--<activeByDefault>true</activeByDefault>-->
            <!--</activation>-->
        <!--</profile>-->
        <!--<profile>-->
            <!--<id>test</id>-->
            <!--<properties>-->
                <!--<env>test</env>-->
            <!--</properties>-->
            <!--&lt;!&ndash;<activation>&ndash;&gt;-->
                <!--&lt;!&ndash;<activeByDefault>true</activeByDefault>&ndash;&gt;-->
            <!--&lt;!&ndash;</activation>&ndash;&gt;-->

        <!--</profile>-->
        <!--<profile>-->
            <!--<id>prod</id>-->
            <!--<properties>-->
                <!--<env>prod</env>-->
            <!--</properties>-->
        <!--</profile>-->
    <!--</profiles>-->

    <build>
        <finalName>thinkjoy-web-server</finalName>
        <!--<filters>-->
            <!--<filter>src/main/resources/profiles/${env}.properties</filter>-->
        <!--</filters>-->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <!-- jetty插件 -->
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <!--<version>9.0.0.v20130308</version>-->
                <version>9.2.7.v20150116</version>
                <configuration>
                    <scanIntervalSeconds>3</scanIntervalSeconds>
                    <webApp>
                        <contextPath>/</contextPath>
                    </webApp>
                    <httpConnector>
                        <port>9999</port>
                    </httpConnector>
                    <reload>automatic</reload>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <skipTests>true</skipTests>
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>-server -XX:PermSize=1024m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <outputFileNameMapping>@{artifactId}@-@{baseVersion}@.@{extension}@</outputFileNameMapping>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
